; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/lib/traceevent/extr_event-parse.c_pevent_register_print_string.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/lib/traceevent/extr_event-parse.c_pevent_register_print_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pevent = type { i32, %struct.printk_list* }
%struct.printk_list = type { i64, i32, %struct.printk_list* }

@ENOMEM = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pevent_register_print_string(%struct.pevent* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.pevent*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.printk_list*, align 8
  store %struct.pevent* %0, %struct.pevent** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = call %struct.printk_list* @malloc(i32 24)
  store %struct.printk_list* %9, %struct.printk_list** %8, align 8
  %10 = load %struct.printk_list*, %struct.printk_list** %8, align 8
  %11 = icmp ne %struct.printk_list* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %43

13:                                               ; preds = %3
  %14 = load %struct.pevent*, %struct.pevent** %5, align 8
  %15 = getelementptr inbounds %struct.pevent, %struct.pevent* %14, i32 0, i32 1
  %16 = load %struct.printk_list*, %struct.printk_list** %15, align 8
  %17 = load %struct.printk_list*, %struct.printk_list** %8, align 8
  %18 = getelementptr inbounds %struct.printk_list, %struct.printk_list* %17, i32 0, i32 2
  store %struct.printk_list* %16, %struct.printk_list** %18, align 8
  %19 = load i64, i64* %7, align 8
  %20 = load %struct.printk_list*, %struct.printk_list** %8, align 8
  %21 = getelementptr inbounds %struct.printk_list, %struct.printk_list* %20, i32 0, i32 0
  store i64 %19, i64* %21, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @strdup(i8* %22)
  %24 = load %struct.printk_list*, %struct.printk_list** %8, align 8
  %25 = getelementptr inbounds %struct.printk_list, %struct.printk_list* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 8
  %26 = load %struct.printk_list*, %struct.printk_list** %8, align 8
  %27 = getelementptr inbounds %struct.printk_list, %struct.printk_list* %26, i32 0, i32 1
  %28 = load i32, i32* %27, align 8
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %31, label %30

30:                                               ; preds = %13
  br label %39

31:                                               ; preds = %13
  %32 = load %struct.printk_list*, %struct.printk_list** %8, align 8
  %33 = load %struct.pevent*, %struct.pevent** %5, align 8
  %34 = getelementptr inbounds %struct.pevent, %struct.pevent* %33, i32 0, i32 1
  store %struct.printk_list* %32, %struct.printk_list** %34, align 8
  %35 = load %struct.pevent*, %struct.pevent** %5, align 8
  %36 = getelementptr inbounds %struct.pevent, %struct.pevent* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 8
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %36, align 8
  store i32 0, i32* %4, align 4
  br label %43

39:                                               ; preds = %30
  %40 = load %struct.printk_list*, %struct.printk_list** %8, align 8
  %41 = call i32 @free(%struct.printk_list* %40)
  %42 = load i32, i32* @ENOMEM, align 4
  store i32 %42, i32* @errno, align 4
  store i32 -1, i32* %4, align 4
  br label %43

43:                                               ; preds = %39, %31, %12
  %44 = load i32, i32* %4, align 4
  ret i32 %44
}

declare dso_local %struct.printk_list* @malloc(i32) #1

declare dso_local i32 @strdup(i8*) #1

declare dso_local i32 @free(%struct.printk_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
